Attic Changelog
===============

Here you can see the full list of changes between each darc release.


Version 0.7
-----------

(feature release, released on X)

- Experimental: Archives mountable as fuse filesystems.


Version 0.6.1
-------------

(bugfix release, released on July 19, 2013)

- Fixed an issue where mtime was not always correctly restored.


Version 0.6
-----------

First public release on July 9, 2013